Fixed issue on Chrome with a global box-sizing declaration -- I think I had elements overflowing Bootstrap cells somehow. Issue was not present on Firefox, and Chrome didn't update its copy of the source when I tested it there, so it slipped through.

--- a/newtry.css
+++ b/newtry.css
@@ -8,6 +8,12 @@
 
 /* TODO: replace binary breakpoints with more .less */
 
+* {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 body {
   background-color:#c6473e;
 }
